syntax = "proto3";

option csharp_namespace = "CCM.Services";

package GrpcProtos;

message GetRequest{
	int32 id = 1;
}
